tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_14.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-14.c" (c, x86_64-unknown-linux-gnu)
global global : rec___va_list_tag[1] = zero [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn vat(%arg0: rec___va_list_tag*, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec___va_list_tag*):
        %8 = alloca rec___va_list_tag*, "param", align 8
        %9 = alloca rec___va_list_tag[1], "local", align 16
        store %arg0, %8
        %10 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        %11 = get_global @global : rec___va_list_tag[1]*
        %12 = cast(array_to_ptrdecay) %11 : rec___va_list_tag*
        %13 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_copy>
        %14 = load %8 : rec___va_list_tag*, align 8
        %15 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_copy>
        scope {
            %65 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %67 = const 1 : s32i
            %68 = cmp ne %66, %67 : bool
            if %68 {
                %69 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %16 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        scope {
            %59 = get_global @global : rec___va_list_tag[1]*
            %60 = cast(array_to_ptrdecay) %59 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %62 = const 1 : s32i
            %63 = cmp ne %61, %62 : bool
            if %63 {
                %64 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %17 = get_global @global : rec___va_list_tag[1]*
        %18 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        scope {
            %54 = load %8 : rec___va_list_tag*, align 8
            <unmodeled: cir.va_arg>
            %56 = const 1 : s32i
            %57 = cmp ne %55, %56 : bool
            if %57 {
                %58 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %19 = load %8 : rec___va_list_tag*, align 8
        <unmodeled: cir.va_end>
        %20 = load %8 : rec___va_list_tag*, align 8
        <unmodeled: cir.va_start>
        %21 = get_global @global : rec___va_list_tag[1]*
        %22 = cast(array_to_ptrdecay) %21 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        %23 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        %24 = load %8 : rec___va_list_tag*, align 8
        <unmodeled: cir.va_copy>
        scope {
            %49 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %51 = const 1 : s32i
            %52 = cmp ne %50, %51 : bool
            if %52 {
                %53 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %25 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        %26 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        %27 = get_global @global : rec___va_list_tag[1]*
        %28 = cast(array_to_ptrdecay) %27 : rec___va_list_tag*
        <unmodeled: cir.va_copy>
        scope {
            %44 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %46 = const 1 : s32i
            %47 = cmp ne %45, %46 : bool
            if %47 {
                %48 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %29 = cast(array_to_ptrdecay) %9 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        scope {
            %38 = get_global @global : rec___va_list_tag[1]*
            %39 = cast(array_to_ptrdecay) %38 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %41 = const 1 : s32i
            %42 = cmp ne %40, %41 : bool
            if %42 {
                %43 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %30 = get_global @global : rec___va_list_tag[1]*
        %31 = cast(array_to_ptrdecay) %30 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        scope {
            %33 = load %8 : rec___va_list_tag*, align 8
            <unmodeled: cir.va_arg>
            %35 = const 1 : s32i
            %36 = cmp ne %34, %35 : bool
            if %36 {
                %37 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %32 = load %8 : rec___va_list_tag*, align 8
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec___va_list_tag[1], "t", align 16
    %2 = const 0 : s32i
    store %2, %0
    %3 = cast(array_to_ptrdecay) %1 : rec___va_list_tag*
    %4 = const 1 : s32i
    call @vat(%3, %4) [all]
    %5 = get_global @exit : ((s32i) -> void)*
    %6 = const 0 : s32i
    call @exit(%6) [all]
    %7 = load %0 : s32i
    return %7
}
