tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_15.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-15.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn vafunction(%arg0: s8i*, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*):
        %26 = alloca s8i*, "dummy", align 8
        %27 = alloca double, "darg", align 8
        %28 = alloca s32i, "iarg", align 4
        %29 = alloca s32i, "flag", align 4
        %30 = alloca s32i, "i", align 4
        %31 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %26
        %32 = const 0 : s32i
        store %32, %29, align 4
        %33 = cast(array_to_ptrdecay) %31 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %35 = const 1 : s32i
            store %35, %30, align 4
            for cond: {
                %57 = load %30 : s32i, align 4
                %58 = const 18 : s32i
                %59 = cmp le %57, %58 : bool
                condition %59
            } step: {
                %36 = load %30 : s32i, align 4
                %37 = inc %36 : s32i [nsw]
                store %37, %30, align 4
                %38 = load %29 : s32i, align 4
                %39 = inc %38 : s32i [nsw]
                store %39, %29, align 4
                yield
            } do {
                scope {
                    scope {
                        %40 = load %29 : s32i, align 4
                        %41 = const 1 : s32i
                        %42 = and %40, %41 : s32i
                        %43 = cast(int_to_bool) %42 : bool
                        if %43 {
                            %50 = cast(array_to_ptrdecay) %31 : rec___va_list_tag*
                            <unmodeled: cir.va_arg>
                            store %51, %27, align 8
                            scope {
                                %52 = load %27 : double, align 8
                                %53 = load %30 : s32i, align 4
                                %54 = cast(int_to_float) %53 : double
                                %55 = cmp ne %52, %54 : bool
                                if %55 {
                                    %56 = get_global @abort : (() -> void)*
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        } else {
                            %44 = cast(array_to_ptrdecay) %31 : rec___va_list_tag*
                            <unmodeled: cir.va_arg>
                            store %45, %28, align 4
                            scope {
                                %46 = load %28 : s32i, align 4
                                %47 = load %30 : s32i, align 4
                                %48 = cmp ne %46, %47 : bool
                                if %48 {
                                    %49 = get_global @abort : (() -> void)*
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %34 = cast(array_to_ptrdecay) %31 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @.str : s8i[1]*
    %3 = cast(array_to_ptrdecay) %2 : s8i*
    %4 = const 1 : s32i
    %5 = const 2.000000e+00 : double
    %6 = const 3 : s32i
    %7 = const 4.000000e+00 : double
    %8 = const 5 : s32i
    %9 = const 6.000000e+00 : double
    %10 = const 7 : s32i
    %11 = const 8.000000e+00 : double
    %12 = const 9 : s32i
    %13 = const 1.000000e+01 : double
    %14 = const 11 : s32i
    %15 = const 1.200000e+01 : double
    %16 = const 13 : s32i
    %17 = const 1.400000e+01 : double
    %18 = const 15 : s32i
    %19 = const 1.600000e+01 : double
    %20 = const 17 : s32i
    %21 = const 1.800000e+01 : double
    call @vafunction(%3, %4, %5, %6, %7, %8, %9, %10, %11, %12, %13, %14, %15, %16, %17, %18, %19, %20, %21) [all]
    %22 = get_global @exit : ((s32i) -> void)*
    %23 = const 0 : s32i
    call @exit(%23) [all]
    %24 = const 0 : s32i
    store %24, %0
    %25 = load %0 : s32i
    return %25
}
