tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_17.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/va-arg-17.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]

fn abort() -> void [external, c, nothrow];
fn vafunction(%arg0: s8i*, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*):
        %17 = alloca s8i*, "dummy", align 8
        %18 = alloca rec___va_list_tag[1], "ap", align 16
        store %arg0, %17
        %19 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
        <unmodeled: cir.va_start>
        scope {
            %61 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %63 = const 1.000000e+00 : double
            %64 = cmp ne %62, %63 : bool
            if %64 {
                %65 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %56 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %58 = const 2.000000e+00 : double
            %59 = cmp ne %57, %58 : bool
            if %59 {
                %60 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %51 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %53 = const 3.000000e+00 : double
            %54 = cmp ne %52, %53 : bool
            if %54 {
                %55 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %46 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %48 = const 4.000000e+00 : double
            %49 = cmp ne %47, %48 : bool
            if %49 {
                %50 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %41 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %43 = const 5.000000e+00 : double
            %44 = cmp ne %42, %43 : bool
            if %44 {
                %45 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %36 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %38 = const 6.000000e+00 : double
            %39 = cmp ne %37, %38 : bool
            if %39 {
                %40 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %31 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %33 = const 7.000000e+00 : double
            %34 = cmp ne %32, %33 : bool
            if %34 {
                %35 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %26 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %28 = const 8.000000e+00 : double
            %29 = cmp ne %27, %28 : bool
            if %29 {
                %30 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %21 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
            <unmodeled: cir.va_arg>
            %23 = const 9.000000e+00 : double
            %24 = cmp ne %22, %23 : bool
            if %24 {
                %25 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %20 = cast(array_to_ptrdecay) %18 : rec___va_list_tag*
        <unmodeled: cir.va_end>
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @.str : s8i[1]*
    %3 = cast(array_to_ptrdecay) %2 : s8i*
    %4 = const 1.000000e+00 : double
    %5 = const 2.000000e+00 : double
    %6 = const 3.000000e+00 : double
    %7 = const 4.000000e+00 : double
    %8 = const 5.000000e+00 : double
    %9 = const 6.000000e+00 : double
    %10 = const 7.000000e+00 : double
    %11 = const 8.000000e+00 : double
    %12 = const 9.000000e+00 : double
    call @vafunction(%3, %4, %5, %6, %7, %8, %9, %10, %11, %12) [all]
    %13 = get_global @exit : ((s32i) -> void)*
    %14 = const 0 : s32i
    call @exit(%14) [all]
    %15 = const 0 : s32i
    store %15, %0
    %16 = load %0 : s32i
    return %16
}
